--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -15,6 +15,15 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Intro Blurb", name: "description", widget: "text"}
       - {label: "Image", name: "image", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
+  - name: "survey"
+    label: "Survey"
+    folder: "site/content/survey"
+    create: true
+    fields: # The fields each document in this collection have
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Description", name: "description", widget: "text"}
+      - {label: "Survey Body", name: "schema", widget: "markdown"}
   - name: "pages"
     label: "Pages"
     files:
